<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_transaction" />
        <item
            android:id="@+id/nav_Merchant"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_merchant" />
        <item
            android:id="@+id/nav_totals"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_totals" />
        <item android:id="@+id/nav_reports"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_reports" />
        <item android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_settings" />

    </group>
</menu>
