<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".ui.transactions.Authorization.Auth_menuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/auth_btn"
            android:layout_width="408dp"
            android:layout_height="74dp"
            android:layout_marginTop="68dp"
            android:text="@string/Authorization"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/authorization_void_btn"
            android:layout_width="344dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="76dp"
            android:text="@string/Auth_void"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_btn" />

        <Button
            android:id="@+id/authorization_advice_btn"
            android:layout_width="236dp"
            android:layout_height="34dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="84dp"
            android:text="@string/Auth_Advice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authorization_void_btn" />

        <Button
            android:id="@+id/authorization_Extension_btn"
            android:layout_width="252dp"
            android:layout_height="61dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="88dp"
            android:text="@string/Auth_ext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authorization_advice_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>