<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_transaction"
        android:name="com.example.halalah.ui.transactions.TransactionFragment"
        android:label="@string/menu_transaction"
        tools:layout="@layout/fragment_transaction">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.halalah.ui.transactions.TransactionFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_transaction">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_transaction" />

        <argument
            android:name="myArg"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/nav_Merchant"
        android:name="com.example.halalah.ui.merchant.MerchantFragment"
        android:label="@string/menu_merchant"
        tools:layout="@layout/fragment_merchant" />

    <fragment
        android:id="@+id/nav_totals"
        android:name="com.example.halalah.ui.totals.TotalsFragment"
        android:label="@string/menu_totals"
        tools:layout="@layout/fragment_totals" />
    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.halalah.ui.reports.Reports"
        android:label="fragment_reports"
        tools:layout="@layout/fragment_reports" />
    <fragment android:id="@+id/nav_home"
        android:name="com.example.halalah.Fragment_home_Transaction"
        android:label="Home"
        tools:layout="@layout/fragment_home_transaction" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.halalah.ui.operation_setting.Setting"
        android:label="setting"
        tools:layout="@layout/fragment_setting" />



</navigation>