<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/activity_superadmin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/settings_term_para"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@drawable/drawable_button"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:text="@string/term_para"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/settings_communication_para"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/settings_term_para"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/drawable_button"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:text="@string/communication_para"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/settings_trad_manager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/settings_communication_para"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/drawable_button"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:text="@string/trad_manager"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/settings_online_init"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/settings_trad_manager"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/drawable_button"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:text="@string/online_init"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/ic_capk_and_para_download"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/settings_online_init"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/drawable_button"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:text="@string/ic_capk_para_download"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tmk_tpk_tak_trk_download"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/ic_capk_and_para_download"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/drawable_button"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:text="@string/tmk_tpk_tak_trk_download"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/settings_other"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/tmk_tpk_tak_trk_download"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/drawable_button"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:text="@string/other_setting"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/key_insert"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/settings_other"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/drawable_button"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:text="@string/import_key"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/key_insert"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/drawable_button"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:gravity="center_vertical"
            android:text="@string/app_version"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:gravity="center_vertical"
            android:text="1111"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"/>
    </LinearLayout>

    <!--<Button
        android:id="@+id/settings_version_informatin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/settings_other"
        android:background="@drawable/drawable_button"
        android:onClick="onClick"
        android:textSize="20sp"
        android:text="@string/version_informatin"/>-->
</RelativeLayout>
