<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_card_confirm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/btn_background">
        <TextView
            android:id="@+id/input_amount_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/please_input_pin"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/pin_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/input_amount_tip"
            android:layout_marginTop="20dp"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/trad_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/pin_num"
            android:layout_marginTop="30dp"
            android:text="@string/pin_tip_amount"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/card_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/trad_amount"
            android:layout_marginTop="10dp"
            android:text="@string/pin_tip_card_num"
            android:textSize="18sp"/>
    </RelativeLayout>
</RelativeLayout>
